css/style.css
* {
  box-sizing: border-box;
  font-family: "Roboto", sans-serif;
  font-weight: 400;
}

/*  --------------------------------------- GRID --------------------------------------- */

.grid-container {
  display: grid;
  grid-template-columns: 100%;
  grid-template-rows: auto;
  grid-template-areas:
    "header"
    "navigation"
    "main";
}

header {
  grid-area: header;
}

nav {
  grid-area: navigation;
}

main {
  grid-area: main;
  display: grid;
}

/*  --------------------------------------- STYLES --------------------------------------- */

header {
  width: 100%;
  color: #fff;
  background-color: #7068c9;
  display: flex;
  justify-content: space-around;
  margin: 0 auto;
  padding: 0;
}

header h1 {
  display: block;
  margin-right: auto;
  padding-left: 10px;
  font-weight: 300;
}

.main-header {
  display: flex;
}

h2 {
  margin-top: 0;
  margin-right: 0;
  padding-top: 20px;
  padding-right: 25px;
  height: 65px;
  border-right: 1px solid gray;
}

.headline-empty {
  border-right: none;
  margin-right: -25px;
  border-bottom: 1px solid gray;
  background-color: rgb(240, 240, 240);
  width: 100%;
}

header h3 {
  margin-top: 30px;
  padding-right: 20px;
  padding-left: 15px;
}

.bell-icon img {
  width: 30px;
  padding-top: 25px;
  transition: transform 0.5s ease-out;
}

.bell-icon img:hover {
  transform: rotate(50deg);
}

.vl {
  margin: 15px 15px;
  width: 1px; /* Line width */
  background-color: #fff; /* Line color */
  height: 65%; /* Override in-line if you want specific height. */
}

.section-divider {
  width: 100%;
  margin-left: -27px;
  padding-right: 50px;
  margin-top: 20px;
}

.profile-image {
  border-radius: 50%;
  height: 50px;
  width: 50px;
}

header img {
  margin: auto 0;
}

.main-nav {
  display: flex;
  justify-content: center;
  background-color: #443f7a;
}

.main-nav img {
  width: 43px;
  margin: 15px 30px;
}

main h3 {
  text-transform: uppercase;
  margin-right: auto;
}

main {
  width: 100%;
  background-color: #fff;
  padding: 0 25px 25px 25px;
}

.alert-banner {
  width: 100%;
  color: #fff;
  text-align: center;
  background-color: #7068c9;
  display: flex;
  flex-direction: row;
  padding: 0 15px;
  border-radius: 5px;
}

.alert-banner-close {
  margin-left: auto;
}

.traffic-nav {
  padding-left: 0;
  display: flex;
  justify-content: space=space-evenly;
}

.traffic-nav-link {
  list-style-type: none;
  height: 45px;
  width: calc(20% + 2px);
  padding-top: 12px;
  text-align: center;
}

.traffic-nav-link:hover {
  background-color: rgb(114, 197, 114);
  color: #fff;
  border-radius: 25px;
}

.widget-container-full,
.widget-container-half {
  width: 85vw;
}

.social-container {
  background-color: rgb(240, 240, 240);
  margin-bottom: 10px;
  padding: 0 20px;
  border-radius: 1em;
  border: 1px solid rgb(117, 116, 116);
}

.social-image {
  background-color: #7068c9;
  border-radius: 50%;
  padding: 20px;
  margin-bottom: 20px;
  display: inline-block;
}

.social-icon {
  background-color: #7068c9;
  width: 50px;
  fill: white;
  border-radius: 50%;
}

.instagram {
  border: 1px solid #7068c9;
  border-radius: 5px;
}

.social-text {
  display: inline-block;
  margin-left: 20px;
  color: rgb(117, 116, 116);
}

.social-name {
  color: #7068c9;
  font-size: 25px;
  margin-top: 10;
  margin-bottom: 0;
}

.social-users {
  margin: 0;
  font-size: 50px;
  font-weight: 300;
}

/* <!------------------ Members/Social ROW -----------------> */

.members-divider {
  margin: 30px 0;
}

.members a {
  text-decoration: none;
  color: #443f7a;
}

.members-container {
  display: flex;
  flex-direction: column;
  align-items: center;
}

.members-container div * {
  text-align: center;
}

.members-container img {
  border-radius: 50%;
}

.members-container p {
  margin: 3px;
}

.recent-activity span {
  font-weight: 500;
}

/* <!-- message user --> */
.widget-container {
  display: flex;
  flex-direction: column;
}

.form-field,
.form-area {
  background-color: rgb(240, 240, 240);
  border-color: rgb(117, 116, 116);
  margin-bottom: 15px;
  border-radius: 5px;
}

.form-field {
  height: 60px;
  padding: 10px;
}

.form-area {
  height: 170px;
}

textarea {
  padding: 10px;
}

::placeholder {
  color: rgb(117, 116, 116);
}

.testing-div {
  display: flex;
}

#testing-switch {
  display: inline-block;
  margin-left: auto;
}

.switch-ios.switch-light input:checked ~ span {
  text-transform: uppercase;
  border-color: lightgray;
  border-color: #7068c9;
  box-shadow: INSET 0 0 0 30px #7068c9;
}

.switch-ios.switch-light input:checked ~ span a {
  border-color: lightgray;
  border: 0.2em solid #d8d9db;
}

.switch-ios.switch-light input ~ span {
  text-transform: uppercase;
}

.settings p {
  display: inline-block;
  margin-top: 0;
  padding-bottom: 25px;
}

.switch {
  margin-left: auto;
}

.switch-light {
  display: inline-block;
  width: 95px;
}

#timezone {
  width: 100%;
  color: rgb(117, 116, 116);
}

.button-primary {
  background-color: #7068c9;
  margin-right: 4%;
}

.button-primary,
.button-disabled {
  border-radius: 5px;
  font-size: smaller;
  height: 3.5em;
  display: inline-block;
  width: 47%;
  text-transform: uppercase;
}

#send {
  width: 100%;
  margin-right: 0;
}

#cancel {
  background-color: rgb(117, 116, 116);
}

button {
  font-weight: 300;
  letter-spacing: 1px;
  font-size: large;
  color: #fff;
}

/* <!------------------ Media Queries -----------------> */

@media (min-width: 768px) {
  .grid-container {
    grid-template-columns: 55px 1fr;
    grid-template-areas:
      "header header"
      "navigation main";
  }
  main {
    grid-template-columns: 50%;
    padding: 0 10px 20px 13px;
  }
  .daily,
  .testing-div,
  .settings {
    grid-column: 1 / span 1;
  }
  .mobile {
    grid-column: 2 / span 1;
  }
  .social-stats,
  .recent-activity,
  .members,
  .traffic,
  .alert,
  .main-header,
  .message,
  .section-divider,
  .timezone {
    grid-column: 1 / span 2;
  }
  #mobile-divider {
    display: none;
  }

  .headline-empty {
    margin-right: -10px;
  }
  .main-nav {
    flex-direction: column;
    justify-content: flex-start;
  }
  .main-nav img {
    width: 30px;
    margin: 15px 11px;
  }
  .section-divider {
    width: 100%;
    margin-left: -13px;
    padding-right: 20px;
  }
  .mobile {
    border-left: 1px solid gray;
    padding-left: 10px;
    margin-bottom: -20px;
  }
  .daily,
  .mobile {
    margin-top: -10px;
  }
  .traffic-header {
    display: flex;
  }
  .traffic-nav {
    padding-left: 0;
  }
  .traffic-nav-link {
    padding: 12px 15px;
    width: 80px;
  }

  .widget-container-full {
    width: 88vw;
  }

  .widget-container-half {
    width: 43vw;
  }

  .social-box {
    display: flex;
  }
  .social-container {
    display: flex;
    padding: 5px 10px;
    margin: 0 6px 6px 0;
  }
  .social-image {
    margin-top: 10px;
    margin-bottom: 10px;
    padding: 15px;
    width: 40%;
  }
  .social-icon {
    margin-left: 3px;
    margin-top: 2px;
    width: 90%;
  }
  .social-text p {
    font-size: 120%;
  }
  .social-text {
    margin-left: 10px;
    width: 100%;
  }
  .social-container .social-users {
    font-size: 250%;
  }
  .twitter {
    margin-top: 8px;
    /* width: 110%; */
  }
  .members-divider {
    margin: 15px 0;
  }
  .members-container {
    display: block;
  }
  .members-container div {
    padding-left: 15px;
    /* background-color: burlywood; */
  }

  .members-container {
    display: flex;
    flex-direction: row;
    height: 150px;
  }

  .members-container p:last-child {
    margin-left: auto;
  }

  .members-container p:first-child,
  .recent-activity p:last-child {
    text-align: left;
    margin: 0;
  }
  .members-container img {
    width: 100px;
    height: auto;
  }

  .practice {
    display: flex;
    flex-direction: column;
  }
}

@media (min-width: 1024px) {
  .members,
  .message {
    grid-column: 1 / span 1;
  }
  .settings,
  .timezone {
    grid-column: 2 / span 1;
  }
  .recent-activity {
    grid-column: 2 / span 1;
  }
  .desktop-divider {
    display: none;
  }
  .widget-container-full {
    width: 91vw;
  }

  .widget-container-half {
    width: 45vw;
  }
  .members-container img {
    width: 75px;
  }
  .members {
    border-right: 1px solid gray;
  }
  .recent-activity,
  .members {
    margin-top: -10px;
    margin-bottom: -20px;
  }
  .members {
    padding-right: 12px;
  }
  .recent-activity {
    padding-left: 15px;
  }
  .members-divider {
    margin: 0;
  }
  .message {
    padding-right: 12px;
    border-right: 1px solid gray;
  }
  .message,
  .settings {
    margin-top: -10px;
    padding-bottom: 10px;
  }
  .settings {
    padding-left: 12px;
  }
  .timezone {
    margin-top: 66px;
  }
}

